--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using System.Net.Http
+﻿ @using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -9,3 +9,7 @@
 @using Microsoft.JSInterop
 @using YumBlazor
 @using YumBlazor.Components
+@using YumBlazor.Repository.IRepository
+@using YumBlazor.Data
+
+@using YumBlazor.Services.Extensions
